--- a/ui/src/app/native/image.component.html
+++ b/ui/src/app/native/image.component.html
@@ -10,12 +10,22 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+    <ion-header collapse="condense">
+        <ion-toolbar>
+          <ion-title size="large">本命星盘</ion-title>
+        </ion-toolbar>
+      </ion-header>
+
+    <ion-alert [isOpen]="isAlertOpen" header="Alert" subHeader="错误！" [message]="message" [buttons]="alertButtons"
+    (didDismiss)="isAlertOpen=false"></ion-alert>
+
+
     <div class="ion-text-center">
         <h2>{{ horoData.year }}年{{ horoData.month }}月{{ horoData.day }}日 {{ horoData.hour }}:{{ horoData.minute }}:{{
             horoData.second }}</h2>
     </div>
-    <div class="ion-text-center" *ngIf="horosco.error" color="warning"> 获取天宫图数据错误：{{ horosco.message }} </div>
-    <div class="ion-text-center" *ngIf="horosco.loading">
+   
+    <div class="ion-text-center" *ngIf="loading">
         <ion-label>获取星盘</ion-label>
         <ion-spinner name="bubbles"></ion-spinner>
     </div>
@@ -31,36 +41,7 @@
 </ion-content>
 
 <ion-footer>
-    <ion-grid fixed>
-        <ion-row>
-            <ion-col size="2">
-                <ion-button expand="full" fill="clear" (click)="backDateTime()">
-                    <ion-icon slot="icon-only" name="chevron-back-outline"></ion-icon>
-                </ion-button>
-            </ion-col>
-            <ion-col size="8">
-                <!-- <ion-label class="ion-text-center" (click)="changeStep()">1{{ step }}</ion-label> -->
-
-                <ion-button expand="full" fill="clear" (click)="changeStep()">1{{ step }}</ion-button>
-            </ion-col>
-            <ion-col size="2">
-                <ion-button expand="full" fill="clear" (click)="forwardDateTime()">
-                    <ion-icon slot="icon-only" name="chevron-forward-outline"></ion-icon>
-                </ion-button>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
-    <!--     
-    <ion-button>
-        <ion-icon slot="start" name="chevron-back-outline"></ion-icon>
-      </ion-button>
-      
-      <ion-button>
-        Right Icon
-        <ion-icon slot="end" name="chevron-forward-outline"></ion-icon>
-      </ion-button>
-      
-      <ion-button width=100% (click)="test()">Upload</ion-button> -->
+    <horo-date-time-change (chagedStep)="changeStep($event)"></horo-date-time-change>
 
 
 </ion-footer>
