--- a/ui/src/app/native/image.component.html
+++ b/ui/src/app/native/image.component.html
@@ -21,8 +21,8 @@
 
 
     <div class="ion-text-center">
-        <h2>{{ horoData.year }}年{{ horoData.month }}月{{ horoData.day }}日 {{ horoData.hour }}:{{ horoData.minute }}:{{
-            horoData.second }}</h2>
+        <h2>{{ horoData.date.year }}年{{ horoData.date.month }}月{{ horoData.date.day }}日 {{ horoData.date.hour }}:{{ horoData.date.minute }}:{{
+            horoData.date.second }}</h2>
     </div>
    
     <div class="ion-text-center" *ngIf="loading">
