--- a/ui/src/app/native/native.page.html
+++ b/ui/src/app/native/native.page.html
@@ -40,8 +40,8 @@
         <ion-label>出生时间：</ion-label>
       </ion-col>
       <ion-col size="7">
-        <horo-date-time [(year)]="horoData.year" [(month)]="horoData.month" [(day)]="horoData.day"
-          [(hour)]="horoData.hour" [(minute)]="horoData.minute" [(second)]="horoData.second"></horo-date-time>
+        <horo-date-time [(year)]="horoData.date.year" [(month)]="horoData.date.month" [(day)]="horoData.date.day"
+          [(hour)]="horoData.date.hour" [(minute)]="horoData.date.minute" [(second)]="horoData.date.second"></horo-date-time>
       </ion-col>
     </ion-row>
   </ion-grid>
@@ -52,7 +52,7 @@
       <ion-label>时区：</ion-label>
     </ion-col>
     <ion-col size="7">
-      <horo-time-zone [(zone)]="horoData.tz"></horo-time-zone>
+      <horo-time-zone [(zone)]="horoData.date.tz"></horo-time-zone>
     </ion-col>
   </ion-row>
 
@@ -61,7 +61,7 @@
       <ion-label>夏令时：</ion-label>
     </ion-col>
     <ion-col size="7">
-      <ion-checkbox [(ngModel)]="horoData.st"></ion-checkbox>
+      <ion-checkbox [(ngModel)]="horoData.date.st"></ion-checkbox>
     </ion-col>
   </ion-row>
 
@@ -70,11 +70,11 @@
       <ion-label>出生地：</ion-label>
     </ion-col>
     <ion-col>
-      <horo-map style="margin-right: 1rem;" [(localName)]="horoData.geo_name" [(long)]="horoData.geo_long"
-        [(lat)]="horoData.geo_lat"></horo-map>
+      <horo-map style="margin-right: 1rem;" [(localName)]="horoData.geo_name" [(long)]="horoData.geo.long"
+        [(lat)]="horoData.geo.lat"></horo-map>
 
-      <horo-geo [(geoLocalName)]="horoData.geo_name" [(geoLong)]="horoData.geo_long"
-        [(geoLat)]="horoData.geo_lat"></horo-geo>
+      <horo-geo [(geoLocalName)]="horoData.geo_name" [(geoLong)]="horoData.geo.long"
+        [(geoLat)]="horoData.geo.lat"></horo-geo>
     </ion-col>
   </ion-row>
 
