--- a/ui/src/app/process/process.page.html
+++ b/ui/src/app/process/process.page.html
@@ -41,8 +41,8 @@
         <ion-label>出生时间：</ion-label>
       </ion-col>
       <ion-col size="7">
-        <horo-date-time [(year)]="horoData.year" [(month)]="horoData.month" [(day)]="horoData.day"
-          [(hour)]="horoData.hour" [(minute)]="horoData.minute" [(second)]="horoData.second"></horo-date-time>
+        <horo-date-time [(year)]="horoData.date.year" [(month)]="horoData.date.month" [(day)]="horoData.date.day"
+          [(hour)]="horoData.date.hour" [(minute)]="horoData.date.minute" [(second)]="horoData.date.second"></horo-date-time>
       </ion-col>
     </ion-row>
   </ion-grid>
@@ -53,7 +53,7 @@
       <ion-label>时区：</ion-label>
     </ion-col>
     <ion-col size="7">
-      <horo-time-zone [(zone)]="horoData.tz"></horo-time-zone>
+      <horo-time-zone [(zone)]="horoData.date.tz"></horo-time-zone>
     </ion-col>
   </ion-row>
 
@@ -62,7 +62,7 @@
       <ion-label>夏令时：</ion-label>
     </ion-col>
     <ion-col size="7">
-      <ion-checkbox [(ngModel)]="horoData.st"></ion-checkbox>
+      <ion-checkbox [(ngModel)]="horoData.date.st"></ion-checkbox>
     </ion-col>
   </ion-row>
 
@@ -71,11 +71,11 @@
       <ion-label>出生地：</ion-label>
     </ion-col>
     <ion-col>
-      <horo-map style="margin-right: 1rem;" [(localName)]="horoData.geo_name" [(long)]="horoData.geo_long"
-        [(lat)]="horoData.geo_lat"></horo-map>
+      <horo-map style="margin-right: 1rem;" [(localName)]="horoData.geo_name" [(long)]="horoData.geo.long"
+        [(lat)]="horoData.geo.lat"></horo-map>
 
-      <horo-geo [(geoLocalName)]="horoData.geo_name" [(geoLong)]="horoData.geo_long"
-        [(geoLat)]="horoData.geo_lat"></horo-geo>
+      <horo-geo [(geoLocalName)]="horoData.geo_name" [(geoLong)]="horoData.geo.long"
+        [(geoLat)]="horoData.geo.lat"></horo-geo>
     </ion-col>
   </ion-row>
 
@@ -105,8 +105,26 @@
       <ion-label>推运时间：</ion-label>
     </ion-col>
     <ion-col size="7">
-      <horo-date-time [(year)]="processData.year" [(month)]="processData.month" [(day)]="processData.day"
-        [(hour)]="processData.hour" [(minute)]="processData.minute" [(second)]="processData.second"></horo-date-time>
+      <horo-date-time [(year)]="processData.date.year" [(month)]="processData.date.month" [(day)]="processData.date.day"
+        [(hour)]="processData.date.hour" [(minute)]="processData.date.minute" [(second)]="processData.date.second"></horo-date-time>
+    </ion-col>
+  </ion-row>
+
+  <ion-row>
+    <ion-col size="5" class="ion-text-right">
+      <ion-label>时区：</ion-label>
+    </ion-col>
+    <ion-col size="7">
+      <horo-time-zone [(zone)]="processData.date.tz"></horo-time-zone>
+    </ion-col>
+  </ion-row>
+
+  <ion-row>
+    <ion-col size="5" class="ion-text-right">
+      <ion-label>夏令时：</ion-label>
+    </ion-col>
+    <ion-col size="7">
+      <ion-checkbox [(ngModel)]="processData.date.st"></ion-checkbox>
     </ion-col>
   </ion-row>
 
@@ -116,11 +134,11 @@
       <ion-label>现居住地：</ion-label>
     </ion-col>
     <ion-col>
-      <horo-map style="margin-right: 1rem;" [(localName)]="processData.geo_name" [(long)]="processData.geo_long"
-        [(lat)]="processData.geo_lat"></horo-map>
+      <horo-map style="margin-right: 1rem;" [(localName)]="processData.geo_name" [(long)]="processData.geo.long"
+        [(lat)]="processData.geo.lat"></horo-map>
 
-      <horo-geo [(geoLocalName)]="processData.geo_name" [(geoLong)]="processData.geo_long"
-        [(geoLat)]="processData.geo_lat"></horo-geo>
+      <horo-geo [(geoLocalName)]="processData.geo_name" [(geoLong)]="processData.geo.long"
+        [(geoLat)]="processData.geo.lat"></horo-geo>
     </ion-col>
   </ion-row>
 
