--- a/ui/src/app/process/return/return.component.html
+++ b/ui/src/app/process/return/return.component.html
@@ -1,19 +1,16 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      <ng-container *ngIf="path===returnHoroscopName.Solar">日返</ng-container>
-      <ng-container *ngIf="path===returnHoroscopName.Lunar">月返</ng-container>
-    </ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title> {{title}} </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">
-        <ng-container *ngIf="path===returnHoroscopName.Solar">日返</ng-container>
-        <ng-container *ngIf="path===returnHoroscopName.Lunar">月返</ng-container>
-      </ion-title>
+      <ion-title size="large"> {{title}} </ion-title>
     </ion-toolbar>
   </ion-header>
 
