--- a/ui/src/app/process/compare/compare.component.html
+++ b/ui/src/app/process/compare/compare.component.html
@@ -18,35 +18,37 @@
     (didDismiss)="isAlertOpen=false"></ion-alert>
 
 
- 
-    <div class="ion-text-center">
-      <h2>推运时间：{{ processData.date.year }}年{{ processData.date.month }}月{{ processData.date.day }}日 {{ processData.date.hour }}:{{
-        processData.date.minute }}:{{
-        processData.date.second }}</h2>
-    </div>
 
-    <div class="ion-text-center" *ngIf="returnData">
-      <h2>返照时间：{{ returnData.return_date.year }}年{{ returnData.return_date.month }}月{{
-        returnData.return_date.day }}日 {{ returnData.return_date.hour }}:{{
-        returnData.return_date.minute }}:{{
-        returnData.return_date.second }}</h2>
-    </div>
+  <div class="ion-text-center">
+    <h2>推运时间：{{ processData.date.year }}年{{ processData.date.month.toString().padStart(2, '0') }}月{{
+      processData.date.day.toString().padStart(2, '0') }}日 {{ processData.date.hour.toString().padStart(2, '0') }}:{{
+      processData.date.minute.toString().padStart(2, '0') }}:{{
+      processData.date.second.toString().padStart(2, '0') }}</h2>
+  </div>
 
-    <div class="ion-text-center" *ngIf="loading">
-      <ion-label>获取星盘</ion-label>
-      <ion-spinner name="bubbles"></ion-spinner>
-    </div>
-    <div class="ion-text-center">
-      <canvas id="canvas" width="0" height="0"></canvas>
-    </div>
-    <div *ngIf="compareData" class="horo-aspect-toggle">
-      <ion-label class="ion-text-right">星盘</ion-label>
-      <ion-toggle [(ngModel)]="isAspect" (ionChange)="switchHoroAspect()"></ion-toggle>
-      <!-- <ion-toggle [(ngModel)]="isAspect" (ionChange)="reDraw($event)"></ion-toggle> -->
-      <ion-label>相位</ion-label>
-    </div>
-  </ion-content>
+  <div class="ion-text-center" *ngIf="returnData">
+    <h2>返照时间：{{ returnData.return_date.year }}年{{ returnData.return_date.month.toString().padStart(2, '0') }}月{{
+      returnData.return_date.day.toString().padStart(2, '0') }}日 {{ returnData.return_date.hour.toString().padStart(2,
+      '0') }}:{{
+      returnData.return_date.minute.toString().padStart(2, '0') }}:{{
+      returnData.return_date.second.toString().padStart(2, '0') }}</h2>
+  </div>
 
-  <ion-footer>
-    <horo-date-time-change (chagedStep)="changeStep($event)"></horo-date-time-change>
-  </ion-footer>
+  <div class="ion-text-center" *ngIf="loading">
+    <ion-label>获取星盘</ion-label>
+    <ion-spinner name="bubbles"></ion-spinner>
+  </div>
+  <div class="ion-text-center">
+    <canvas id="canvas" width="0" height="0"></canvas>
+  </div>
+  <div *ngIf="compareData" class="horo-aspect-toggle">
+    <ion-label class="ion-text-right">星盘</ion-label>
+    <ion-toggle [(ngModel)]="isAspect" (ionChange)="switchHoroAspect()"></ion-toggle>
+    <!-- <ion-toggle [(ngModel)]="isAspect" (ionChange)="reDraw($event)"></ion-toggle> -->
+    <ion-label>相位</ion-label>
+  </div>
+</ion-content>
+
+<ion-footer>
+  <horo-date-time-change (chagedStep)="changeStep($event)"></horo-date-time-change>
+</ion-footer>
