--- a/ui/src/app/process/return/return.component.html
+++ b/ui/src/app/process/return/return.component.html
@@ -20,17 +20,20 @@
 
 
   <div class="ion-text-center">
-    <h2>推运时间：{{ processData.date.year }}年{{ processData.date.month }}月{{ processData.date.day }}日 {{
-      processData.date.hour }}:{{
-      processData.date.minute }}:{{
-      processData.date.second }}</h2>
+    <h2>推运时间：{{ processData.date.year }}年{{ processData.date.month.toString().padStart(2, '0') }}月{{
+      processData.date.day .toString().padStart(2, '0')}}日 {{
+      processData.date.hour .toString().padStart(2, '0')}}:{{
+      processData.date.minute .toString().padStart(2, '0')}}:{{
+      processData.date.second .toString().padStart(2, '0')}}</h2>
   </div>
 
-  <div class="ion-text-center">
-    <h2>返照时间：{{ solarReturnData?.return_date?.year }}年{{ solarReturnData?.return_date?.month }}月{{
-      solarReturnData?.return_date?.day }}日 {{ solarReturnData?.return_date?.hour }}:{{
-      solarReturnData?.return_date?.minute }}:{{
-      solarReturnData?.return_date?.second }}</h2>
+  <div class="ion-text-center" *ngIf="solarReturnData">
+    <h2>返照时间：{{ solarReturnData.return_date.year }}年{{ solarReturnData.return_date.month.toString().padStart(2, '0')
+      }}月{{
+      solarReturnData.return_date.day.toString().padStart(2, '0') }}日 {{
+      solarReturnData.return_date.hour.toString().padStart(2, '0') }}:{{
+      solarReturnData.return_date.minute.toString().padStart(2, '0') }}:{{
+      solarReturnData.return_date.second.toString().padStart(2, '0') }}</h2>
   </div>
 
   <div class="ion-text-center" *ngIf="loading">
