--- a/ui/src/app/home/home.page.html
+++ b/ui/src/app/home/home.page.html
@@ -33,5 +33,11 @@
       </div>
       <ion-label>七政</ion-label>
     </div>
+    <div class="item" (click)="navigate('/clean')">
+      <div class="icon">
+        <ion-icon name="star"></ion-icon>
+      </div>
+      <ion-label>清除缓存</ion-label>
+    </div>
   </div>
 </ion-content>
