--- a/ui/src/app/home/home.page.html
+++ b/ui/src/app/home/home.page.html
@@ -33,6 +33,12 @@
       </div>
       <ion-label>七政</ion-label>
     </div>
+    <div class="item" (click)="navigate('/power')">
+      <div class="icon">
+        <ion-icon name="star"></ion-icon>
+      </div>
+      <ion-label>行星力量表</ion-label>
+    </div>
     <div class="item" (click)="navigate('/clean')">
       <div class="icon">
         <ion-icon name="star"></ion-icon>
