--- a/ui/src/app/process/process.page.html
+++ b/ui/src/app/process/process.page.html
@@ -3,14 +3,14 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>{{title}}</ion-title>
+    <ion-title>{{ title }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">{{title}}</ion-title>
+      <ion-title size="large">{{ title }}</ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -20,7 +20,7 @@
         <ion-label>描述：</ion-label>
       </ion-col>
       <ion-col size="7">
-        <ion-input placeholder="输入一些描述信息" [(ngModel)]="horoData.describe"></ion-input>
+        <ion-input placeholder="输入一些描述信息" [(ngModel)]="horaData.describe"></ion-input>
       </ion-col>
     </ion-row>
 
@@ -29,7 +29,7 @@
         <ion-label>性别：</ion-label>
       </ion-col>
       <ion-col size="7">
-        <ion-radio-group [(ngModel)]="horoData.sex">
+        <ion-radio-group [(ngModel)]="horaData.sex">
           <ion-label>男：</ion-label>
           <ion-radio [value]="true" style="margin-right:1rem;"></ion-radio>
 
@@ -44,9 +44,9 @@
         <ion-label>出生时间：</ion-label>
       </ion-col>
       <ion-col size="7">
-        <horo-date-time [(year)]="horoData.date.year" [(month)]="horoData.date.month" [(day)]="horoData.date.day"
-          [(hour)]="horoData.date.hour" [(minute)]="horoData.date.minute"
-          [(second)]="horoData.date.second"></horo-date-time>
+        <horo-date-time [(year)]="horaData.date.year" [(month)]="horaData.date.month" [(day)]="horaData.date.day"
+                        [(hour)]="horaData.date.hour" [(minute)]="horaData.date.minute"
+                        [(second)]="horaData.date.second"></horo-date-time>
       </ion-col>
     </ion-row>
   </ion-grid>
@@ -57,7 +57,7 @@
       <ion-label>时区：</ion-label>
     </ion-col>
     <ion-col size="7">
-      <horo-time-zone [(zone)]="horoData.date.tz"></horo-time-zone>
+      <horo-time-zone [(zone)]="horaData.date.tz"></horo-time-zone>
     </ion-col>
   </ion-row>
 
@@ -66,7 +66,7 @@
       <ion-label>夏令时：</ion-label>
     </ion-col>
     <ion-col size="7">
-      <ion-checkbox [(ngModel)]="horoData.date.st"></ion-checkbox>
+      <ion-checkbox [(ngModel)]="horaData.date.st"></ion-checkbox>
     </ion-col>
   </ion-row>
 
@@ -75,11 +75,11 @@
       <ion-label>出生地：</ion-label>
     </ion-col>
     <ion-col>
-      <horo-map style="margin-right: 1rem;" [(localName)]="horoData.geo_name" [(long)]="horoData.geo.long"
-        [(lat)]="horoData.geo.lat"></horo-map>
+      <horo-map style="margin-right: 1rem;" [(localName)]="horaData.geo_name" [(long)]="horaData.geo.long"
+                [(lat)]="horaData.geo.lat"></horo-map>
 
-      <horo-geo [(geoLocalName)]="horoData.geo_name" [(geoLong)]="horoData.geo.long"
-        [(geoLat)]="horoData.geo.lat"></horo-geo>
+      <horo-geo [(geoLocalName)]="horaData.geo_name" [(geoLong)]="horaData.geo.long"
+                [(geoLat)]="horaData.geo.lat"></horo-geo>
     </ion-col>
   </ion-row>
 
@@ -88,8 +88,8 @@
       <ion-label>宫位系统：</ion-label>
     </ion-col>
     <ion-col size="7">
-      <ion-select label-placement="fixed" okText="确定" cancelText="取消" [(ngModel)]="horoData.house">
-        <ion-select-option *ngFor="let house of houses" [value]="house">{{house}}</ion-select-option>
+      <ion-select label-placement="fixed" okText="确定" cancelText="取消" [(ngModel)]="horaData.house">
+        <ion-select-option *ngFor="let house of houses" [value]="house">{{ house }}</ion-select-option>
       </ion-select>
     </ion-col>
   </ion-row>
@@ -99,8 +99,26 @@
       <ion-label>推运类型：</ion-label>
     </ion-col>
     <ion-col size="7">
-      <ion-label id="process-list">{{processName}}</ion-label>
-      <ion-picker trigger="process-list" [columns]="pickerColumns" [buttons]="pickerButtons"></ion-picker>
+      <ion-label id="open-process-list">{{ processName }}</ion-label>
+      <!--      <ion-picker trigger="process-list" [columns]="pickerColumns" [buttons]="pickerButtons"></ion-picker>-->
+      <ion-modal #modal trigger="open-process-list" [isOpen]="false" (didDismiss)="onDidDismiss($event)">
+        <ng-template>
+          <ion-toolbar>
+            <ion-buttons slot="start">
+              <ion-button (click)="modal.dismiss(null, 'cancel')">取消</ion-button>
+            </ion-buttons>
+            <ion-buttons slot="end">
+              <ion-button (click)="modal.dismiss(currentProcess, 'confirm')">确定</ion-button>
+            </ion-buttons>
+          </ion-toolbar>
+          <ion-picker>
+            <ion-picker-column [value]="currentProcess" (ionChange)="onIonChange($event)">
+              <ion-picker-column-option *ngFor="let option of processOptions" [value]="option.value">{{ option.text }}
+              </ion-picker-column-option>
+            </ion-picker-column>
+          </ion-picker>
+        </ng-template>
+      </ion-modal>
     </ion-col>
   </ion-row>
 
@@ -110,8 +128,8 @@
     </ion-col>
     <ion-col size="7">
       <horo-date-time [(year)]="processData.date.year" [(month)]="processData.date.month" [(day)]="processData.date.day"
-        [(hour)]="processData.date.hour" [(minute)]="processData.date.minute"
-        [(second)]="processData.date.second"></horo-date-time>
+                      [(hour)]="processData.date.hour" [(minute)]="processData.date.minute"
+                      [(second)]="processData.date.second"></horo-date-time>
     </ion-col>
   </ion-row>
 
@@ -140,10 +158,10 @@
     </ion-col>
     <ion-col>
       <horo-map style="margin-right: 1rem;" [(localName)]="processData.geo_name" [(long)]="processData.geo.long"
-        [(lat)]="processData.geo.lat"></horo-map>
+                [(lat)]="processData.geo.lat"></horo-map>
 
       <horo-geo [(geoLocalName)]="processData.geo_name" [(geoLong)]="processData.geo.long"
-        [(geoLat)]="processData.geo.lat"></horo-geo>
+                [(geoLat)]="processData.geo.lat"></horo-geo>
     </ion-col>
   </ion-row>
 
