home页内容自适应屏幕，修改应用的版本号

--- a/ui/src/app/home/home.page.html
+++ b/ui/src/app/home/home.page.html
@@ -13,37 +13,39 @@
     </ion-toolbar>
   </ion-header>
 
-  <div class="container">
-    <div class="item" (click)="navigate('/native')">
-      <div class="icon">
 
-        <ion-icon name="star-outline"></ion-icon>
+  <div class="container">
+    <div class="box">
+      <div class="item" (click)="navigate('/native')">
+        <div class="icon">
+          <ion-icon name="star-outline"></ion-icon>
+        </div>
+        <ion-label>本命</ion-label>
       </div>
-      <ion-label>本命</ion-label>
-    </div>
-    <div class="item" (click)="navigate('/process')">
-      <div class="icon">
-        <ion-icon name="play-forward-outline"></ion-icon>
+      <div class="item" (click)="navigate('/process')">
+        <div class="icon">
+          <ion-icon name="play-forward-outline"></ion-icon>
+        </div>
+        <ion-label>推运</ion-label>
       </div>
-      <ion-label>推运</ion-label>
-    </div>
-    <div class="item" (click)="navigate('/qizheng')">
-      <div class="icon">
-        <ion-icon name="star"></ion-icon>
+      <div class="item" (click)="navigate('/qizheng')">
+        <div class="icon">
+          <ion-icon name="star"></ion-icon>
+        </div>
+        <ion-label>七政</ion-label>
       </div>
-      <ion-label>七政</ion-label>
-    </div>
-    <div class="item" (click)="navigate('/power')">
-      <div class="icon">
-        <ion-icon name="star"></ion-icon>
+      <div class="item" (click)="navigate('/power')">
+        <div class="icon">
+          <ion-icon name="star"></ion-icon>
+        </div>
+        <ion-label>行星力量表</ion-label>
       </div>
-      <ion-label>行星力量表</ion-label>
-    </div>
-    <div class="item" (click)="navigate('/clean')">
-      <div class="icon">
-        <ion-icon name="star"></ion-icon>
+      <div class="item" (click)="navigate('/clean')">
+        <div class="icon">
+          <ion-icon name="star"></ion-icon>
+        </div>
+        <ion-label>清除缓存</ion-label>
       </div>
-      <ion-label>清除缓存</ion-label>
     </div>
   </div>
 </ion-content>
